# iwfm

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_no_versions.txt  run_tests.sh  setup.py
IWFM_DLL_wrapper_public/: DLL_shortcuts.py  ReadMe.md  customPlot_functions.py  customRead_functions.py  plottingExample.ipynb  runningModel_oneStep-at-a-time_example.ipynb
iwfm/: ....iwfm-py.txt  Unbuffered.py  __init__.py  bias_calc.py  bnds2mask.py  bud2csv.py  bud2xl.py  budget_info.py  budgets.py  buds2xl.py  cdec2monthly.py  cfs2afd.py  closest_list.py  column_sum.py  date2text.py  date_index.py  date_util.py  dates_diff.py  day.py  dbf_open.py  dbf_print_record.py  detaw_2_table.py  dicu2table.py  diff_dates.py  distance.py  draw_plot.py  dss_date.py  dts2days.py  elem_centroids.py  elem_poly_coords.py  elem_poly_coords_wkt.py  file2dict.py  file2dict_int.py  file_2_bak.py  file_2_list.py  file_delete.py  file_dir.py  file_get_path.py  file_missing.py  file_rename.py  (+192 more)
tests/: TEST_README.md  test_Unbuffered.py  test_additional_datetime.py  test_aquifer_aquitard_geometry.py  test_bnds2mask.py  test_bud2csv.py  test_budget_functions.py  test_budget_info.py  test_buds2xl.py  test_calib_bias_calc.py  test_calib_calib_stats.py  test_calib_compare.py  test_calib_divshort2obs.py  test_calib_do_avgonly.py  test_calib_fac2iwfm.py  test_calib_find_nearest_index.py  test_calib_functions.py  test_calib_get_hyd_fname.py  test_calib_get_hyd_info.py  test_calib_get_hyd_names.py  test_calib_get_obs_hyd.py  test_calib_get_sim_hyd.py  test_calib_idw.py  (+336 more)
(+361 files in other folders)
