[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "iwfm"
version = "0.0.1"
license={text="GNU"}
description='IWFM Python package'
readme = {text='Classes, methods and functions to read, write and modify IWFM files', content-type='text/plain'}
requires-python='>=3.8'
classifiers= [
            "Development Status :: 3 - Alpha",
            "Intended Audience :: Science/Research",
            "Programming Language :: Python :: 3.8",
            "Operating System :: Microsoft :: Windows",
            "Operating System :: POSIX :: Linux",
            "Operating System :: MacOS :: MacOS X",
        ]

[[project.authors]]
name = "Charles Brush"
email = "cfbrush@ucdavis.edu"
